# typewondo

./: LICENSE  README.md  pyproject.toml  setup.cfg
app/: config.py  index.html  main.py  ngrams.py
typewondo/: __main__.py  config.py  ngrams.py
